# mTerminal

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cliff.toml  electron-builder.yml  electron.vite.config.ts  index.html  install.ps1  install.sh  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vitest.config.ts
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  ci.yml  lint.yml  marketplace-integration.yml  publish-aur-bin.yml  publish-aur-git.yml  publish-github.yml  release.yml  windows-check.yml
electron/main/: claude-code.ts  external-links.ts  git.ts  hosts.ts  index.ts  json-store.ts  kdf-worker.ts  mcp.ts  menu.ts  pty.ts  sessions.ts  settings-store.ts  ssh.ts  system.ts  updater.ts  vault.ts  workspace.ts  wsl.ts
electron/preload/: index.ts
extensions/error-linkifier/: package.json
extensions/file-browser/: package.json  tsup.config.ts
extensions/git-panel/: package.json
extensions/git-status-mini/: package.json
extensions/remote-ssh/: package.json
extensions/theme-pack-extra/: package.json
packaging/: PKGBUILD  PKGBUILD-bin  mterminal.desktop
scripts/: release.mjs  test-extensions-runtime.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: claude_code.rs  hosts.rs  lib.rs  main.rs  mcp_server.rs  pty.rs  ssh.rs  vault.rs
src-tauri/src/ai/: anthropic.rs  keys.rs  mod.rs  openai.rs  provider.rs
src/components/: AICommandPalette.tsx  AIPanel.tsx  ApiKeyInput.tsx  AppErrorBoundary.tsx  Clock.tsx  CodeBlock.tsx  ColorPicker.tsx  ConfirmDialog.tsx  ContextMenu.tsx  ExplainPopover.tsx  GitDiffModal.tsx  GitPanel.tsx  GridResizers.tsx  GridTabToolbar.tsx  InlineEdit.tsx  MasterPasswordModal.tsx  RemoteHostModal.tsx  RemoteWorkspace.tsx  Sidebar.tsx  StatusBar.tsx  TerminalTab.tsx  Titlebar.tsx  UpdateBanner.tsx  VaultDecryptingAnimation.tsx  VoiceIndicator.tsx
src/extensions/: ctx-types.ts  ctx.ts  event-bus.ts  host-renderer.ts  index.ts  kv-store.ts  module-loader.ts  proposed-apis.ts  semver-mini.ts  services.ts  settings-namespace.ts  trust-flow.ts  vault-gate-bridge.ts
terminal/: README.md
(+290 files in other folders)
