[package]
name = "mterminal"
version = "0.1.0"
edition = "2021"
description = "Custom terminal emulator with grouped tabs and warm dark UI"
authors = ["arthurr0"]
license = "MIT"
repository = "https://github.com/arthurr0/mTerminal"
homepage = "https://github.com/arthurr0/mTerminal"
readme = "../README.md"
keywords = ["terminal", "tauri", "pty", "linux"]
categories = ["command-line-utilities"]

[lib]
name = "mterminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-os = "2.0"
tauri-plugin-clipboard-manager = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
parking_lot = "0.12"
once_cell = "1.20"
anyhow = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
