[package]
name = "mterminal"
version = "0.1.0"
edition = "2021"
description = "Custom terminal emulator with grouped tabs and warm dark UI"
authors = ["arthurr0"]
license = "MIT"
repository = "https://github.com/arthurr0/mTerminal"
homepage = "https://github.com/arthurr0/mTerminal"
readme = "../README.md"
keywords = ["terminal", "tauri", "pty", "linux", "windows"]
categories = ["command-line-utilities"]

[lib]
name = "mterminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-os = "2.3"
tauri-plugin-clipboard-manager = "2.3"
tauri-plugin-dialog = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
parking_lot = "0.12"
once_cell = "1.21"
anyhow = "1"
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
zeroize = "1.8"
base64 = "0.22"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
dirs = "5"
hostname = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
